# profile.mobile.apps.native.attach-panel

./: CMakeLists.txt  attach-panel.manifest  attach-panel.pc.in
doc/: attach_panel_doc.h
include/: attach_bundle.h  attach_panel.h  attach_panel_internal.h  conf.h  content_list.h  gesture.h  grid.h  list.h  log.h  page.h  scroller.h  toolbar.h  ug.h  ui_manager.h
packaging/: attach-panel.spec
po/: CMakeLists.txt  ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  bn_BD.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  (+42 more)
res/: CMakeLists.txt
res/edje/: layout.edc  page.edc
res/images/: CMakeLists.txt
sample/: CMakeLists.txt  sample.c  sample.edc  sample.h
src/: attach_bundle.c  attach_panel.c  content_list.c  gesture.c  grid.c  list.c  page.c  scroller.c  toolbar.c  ug.c  ui_manager.c
